--- a/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:buttons="clr-namespace:KinectFittingRoom.View.Buttons"
         xmlns:helpers="clr-namespace:KinectFittingRoom.View.Helpers"
         xmlns:local="clr-namespace:KinectFittingRoom.ViewModel.ClothingItems"
-        xmlns:topButtons="clr-namespace:KinectFittingRoom.ViewModel.ButtonItems"
         xmlns:d="http://schemas.microsoft.com/expressiredyon/blend/2008"        
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:h="http://helix-toolkit.org/wpf"
         xmlns:kinectFittingRoom="clr-namespace:KinectFittingRoom"
+        xmlns:topMenuButtons="clr-namespace:KinectFittingRoom.ViewModel.ButtonItems.TopMenuButtons"
         mc:Ignorable="d"
         WindowState="Maximized"
 		WindowStyle="None"
@@ -138,7 +138,7 @@
                     Canvas.Top="20"
                     Visibility="{Binding KinectService.KinectCameraImage, Converter={StaticResource ValueToVisibilityConverter}}">
                 <buttons:KinectRepeatableButton Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}"
-                                      DataContext="{Binding MenuButton, Source={x:Static topButtons:TopMenuManager.Instance}}">
+                                      DataContext="{Binding MenuButton, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
                     <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}"
                            Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Width}"
                            Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Height}"
@@ -150,8 +150,8 @@
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </buttons:KinectRepeatableButton>
-                <ItemsControl ItemsSource="{Binding ChangeSizePositionButtons, Source={x:Static topButtons:TopMenuManager.Instance}}"
-                              Visibility="{Binding SizePositionButtonsVisibility, Source={x:Static topButtons:TopMenuManager.Instance}}">
+                <ItemsControl ItemsSource="{Binding ChangeSizePositionButtons, Source={x:Static topMenuButtons:TopMenuManager.Instance}}"
+                              Visibility="{Binding SizePositionButtonsVisibility, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"/>
@@ -175,8 +175,8 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
                 <buttons:KinectScreenshotButton Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}" 
-                                      Visibility="{Binding CameraButtonVisibility, Source={x:Static topButtons:TopMenuManager.Instance}}" 
-                                      DataContext="{Binding CameraButton, Source={x:Static topButtons:TopMenuManager.Instance}}">
+                                      Visibility="{Binding CameraButtonVisibility, Source={x:Static topMenuButtons:TopMenuManager.Instance}}" 
+                                      DataContext="{Binding CameraButton, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
                     <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}"
                            Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Width}"
                            Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Height}"
@@ -188,7 +188,7 @@
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </buttons:KinectScreenshotButton>
-                <ItemsControl ItemsSource="{Binding ActualTopMenuButtons, Source={x:Static topButtons:TopMenuManager.Instance}}">
+                <ItemsControl ItemsSource="{Binding ActualTopMenuButtons, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"/>
