--- a/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
@@ -4,13 +4,14 @@
         xmlns:converters="clr-namespace:KinectFittingRoom.Converters"
         xmlns:buttons="clr-namespace:KinectFittingRoom.View.Buttons"
         xmlns:helpers="clr-namespace:KinectFittingRoom.View.Helpers"
-        xmlns:local="clr-namespace:KinectFittingRoom.ViewModel.ClothingItems"
         xmlns:d="http://schemas.microsoft.com/expressiredyon/blend/2008"        
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:h="http://helix-toolkit.org/wpf"
         xmlns:kinectFittingRoom="clr-namespace:KinectFittingRoom"
         xmlns:topMenuButtons="clr-namespace:KinectFittingRoom.ViewModel.ButtonItems.TopMenuButtons"
+        xmlns:clothingItems="clr-namespace:KinectFittingRoom.Model.ClothingItems"
+        xmlns:viewModel="clr-namespace:KinectFittingRoom.ViewModel"
         mc:Ignorable="d"
         WindowState="Maximized"
 		WindowStyle="None"
@@ -59,14 +60,14 @@
                                    ClipToBounds="False" 
 								   Width="{Binding KinectService.Width}" 
 								   Height="{Binding KinectService.Height}"
-                                   CameraTransform="{Binding Path=CameraTransform, Source={x:Static local:ClothingManager.Instance}, Mode=OneWayToSource}"
-                                   ViewportTransform="{Binding Path=ViewportTransform, Source={x:Static local:ClothingManager.Instance}, Mode=OneWayToSource}">
+                                   CameraTransform="{Binding Path=CameraTransform, Source={x:Static viewModel:ClothingManager.Instance}, Mode=OneWayToSource}"
+                                   ViewportTransform="{Binding Path=ViewportTransform, Source={x:Static viewModel:ClothingManager.Instance}, Mode=OneWayToSource}">
             <h:HelixViewport3D.Camera>
                 <OrthographicCamera Position="0,0,10" LookDirection="0,0,-10" UpDirection="0,1,0"/>
             </h:HelixViewport3D.Camera>
             <h:DefaultLights/>
             <helpers:ItemsVisual3D ItemTemplate="{StaticResource ModelTemplate}" 
-                                   ItemsSource="{Binding Path=ChosenClothesModels.Values, Source={x:Static local:ClothingManager.Instance}}"/>
+                                   ItemsSource="{Binding Path=ChosenClothesModels.Values, Source={x:Static viewModel:ClothingManager.Instance}}"/>
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <Grid Width="{Binding KinectService.Width}" Height="{Binding KinectService.Height}"/>
@@ -84,7 +85,7 @@
                     Margin="20"/>
             <!--StackPanel containing all the buttons with clothing categories-->
             <helpers:ScrollableCanvas x:Name="LeftScrollableCanvas"
-                                      ItemsSource="{Binding ActualClothingCategories, Source={x:Static local:ClothingManager.Instance}}" 
+                                      ItemsSource="{Binding ActualClothingCategories, Source={x:Static viewModel:ClothingManager.Instance}}" 
                                       ClipToBounds="True"
                                       Width="{Binding ActualWidth, ElementName=LeftPanel}"
                                       Height="{Binding ActualHeight, ElementName=LeftPanel}" 
@@ -125,7 +126,7 @@
 					Canvas.Right="0"
                     Margin="20"/>
             <!--StackPanel containing all the buttons with clothes-->
-            <helpers:ScrollableCanvas ItemsSource="{Binding Clothing, Source={x:Static local:ClothingManager.Instance}}"
+            <helpers:ScrollableCanvas ItemsSource="{Binding Clothing, Source={x:Static viewModel:ClothingManager.Instance}}"
                                       ClipToBounds="True"
                                       Width="{Binding ActualWidth, ElementName=RightPanel}"
                                       Height="{Binding ActualHeight, ElementName=RightPanel}" 
