--- a/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
@@ -203,8 +203,9 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
                 <buttons:KinectScreenshotButton Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}" 
-                                      Visibility="{Binding CameraButtonVisibility, Source={x:Static topMenuButtons:TopMenuManager.Instance}}" 
-                                      DataContext="{Binding CameraButton, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
+                                                Visibility="{Binding CameraButtonVisibility, Source={x:Static topMenuButtons:TopMenuManager.Instance}}" 
+                                                DataContext="{Binding CameraButton, Source={x:Static topMenuButtons:TopMenuManager.Instance}}"
+                                                AreSoundsOn="{Binding SoundsOn, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
                     <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}"
                            Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Width}"
                            Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Height}"
@@ -241,12 +242,11 @@
                 </ItemsControl>
             </StackPanel>
         </Canvas>
-
         <!--Grids used for closing application-->
-        <Grid Width="{Binding ActualWidth, ElementName=ImageArea}" Background="Black" Opacity="0.7"
+        <Grid Width="{Binding ActualWidth, ElementName=ImageArea}" Background="Black" Opacity="0.5"
               Visibility="{Binding CloseAppGridVisibility, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
-            <TextBlock Text="Czy na pewno chcesz wyjść z programu?"
-                       FontSize="30" TextAlignment="Center" VerticalAlignment="Top" Foreground="White" Margin="40"/>
+            <TextBlock Text="Czy na pewno chcesz wyjść z programu?" Opacity="1"
+                       FontSize="30" TextAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
         </Grid>
         <Grid Name="CloseAppGrid" Width="{Binding ActualWidth, ElementName=ImageArea}"
               Visibility="{Binding CloseAppGridVisibility, Source={x:Static topMenuButtons:TopMenuManager.Instance}}">
