--- a/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
@@ -51,8 +51,8 @@
         <helpers:HelixViewport3DEx CameraRotationMode="Turntable"
                                    ModelUpDirection="0, 1, 0" 
                                    x:Name="ClothesArea"
-                                   ShowCoordinateSystem="False"
-                                   Opacity="{Binding KinectService.ClothesAreaOpacity}"
+                                   ShowCoordinateSystem="False" 
+                                   Visibility="{Binding KinectService.ClothesAreaVisibility}"
                                    ShowViewCube="{Binding DebugModeOn}"
                                    ShowFrameRate="{Binding DebugModeOn}"
                                    ShowCameraInfo="{Binding DebugModeOn}"
